--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-# Ignore editor recovery/backups
-*.recover-bak
-
-# Ignore Archive folder (kept in working tree but ignored for future untracked files)
-Archive/
-
-# Optional local files
-.DS_Store
-node_modules/
+Kenney3.3.0/
